# robot

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN-unified.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.rover-l298n
.github/workflows/: firmware.yml
docs/superpowers/plans/: 2026-06-26-rover-ble-provisioning.md
docs/superpowers/specs/: 2026-06-26-rover-ble-provisioning-design.md
experiments/zenoh/: README.md  sdkconfig.defaults
experiments/zenoh/hub/: hub.c
experiments/zenoh/hub-ws/: hub.c
experiments/zenoh/rover/: rover.c
experiments/zenoh/ws-client-rig/: idf_component.yml  main.c
src/: CMakeLists.txt  camera.c  captive_nat.c  captive_nat.h  device_log.c  device_log.h  dns_server.c  dns_server.h  hub_role.c  ide_bundle.h  idf_component.yml  improv.c  improv.h  main.c  ota_update.c  ota_update.h  provisioning.c  provisioning.h  provisioning_util.c  provisioning_util.h  robot_config.c  robot_config.h  robot_role.c  roles.h  rover_config.c  rover_config.h  rover_role.c  wifi_creds.example.h  wifi_portal.c  wifi_portal.h  ws2812.c  ws_mqtt_bridge.c  ws_zenoh_bridge.c
test/test_improv/: test_improv.c
test/test_util/: test_util.c
tools/: check-captive-probes.py  embed_dashboard.py  embed_ide.py  embed_web.py  flash-all.py  ota-push.py  patch_zenoh.py  sync-dashboard.sh  sync-ide-shell.sh  sync-ide.sh  ws_bridge_test.py
web/: dashboard.html  ide_shell.html
web/site/: index.html
web/site/flash/: README.md  boot.js  flash.js
